# cmake-google-protobuf-example

./: CMakeLists.txt  README.md
proto/: msg.proto
src/: main.cpp
